update basic config

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 title:              Ziyi's Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+email:              wang_ziyi@u.nus.edu
+description:        Stay hungry, Stay foolish.
+author:             Ziyi Wang
 baseurl:  
 url:                wangziyi2016.github.io
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    wangziyi2016
+facebook_username:  
 instagram_username:  
 linkedin_username:
 
